Add color variables. Add project images to image folder

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,4 +11,9 @@ html,
 body {
   box-sizing: border-box;
   font-size: 62.5%;
+  font-family: "Mulish", sans-serif;
 }
+
+// Color variables
+$text_color: #111;
+$text_blue: #4a4ff2;
