--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
 html,
 body {
   box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  font-family: "Mulish", sans-serif; }
 
 /*# sourceMappingURL=index.css.map */
