--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,13 +7,32 @@
   box-sizing: inherit;
 }
 
-html,
+html {
+  font-size: 62.5%;
+}
+
 body {
   box-sizing: border-box;
-  font-size: 62.5%;
   font-family: "Mulish", sans-serif;
+  color: #111;
+  width: 85%;
+  height: 100vh;
+  margin: auto;
 }
 
 // Color variables
-$text_color: #111;
-$text_blue: #4a4ff2;
+//text_blue: #4a4ff2;
+
+// Navigation
+.navigation {
+  width: 100%;
+  display: flex;
+  margin-top: 6rem;
+}
+
+.navigation__links {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  list-style-type: none;
+}
