--- a/css/index.css
+++ b/css/index.css
@@ -41,6 +41,18 @@ body {
     transform: scale(1.2);
     transition: all 0.2s ease-in-out; }
 
+.header__primary {
+  font-weight: 700;
+  font-size: 4rem;
+  line-height: 6rem; }
+.header__tertiary {
+  font-weight: 700;
+  font-size: 2.2rem;
+  line-height: 2.8rem;
+  letter-spacing: -0.0423077rem; }
+.header span {
+  color: #4a4ff2; }
+
 .footer {
   width: 100%;
   display: flex;
