--- a/sass/main.scss
+++ b/sass/main.scss
@@ -43,19 +43,31 @@ body {
 }
 
 .header {
-  &__primary {
-    font-weight: 700;
-    font-size: 4rem;
-    line-height: 6rem;
-  }
   &__tertiary {
-    font-weight: 700;
-    font-size: 2.2rem;
-    line-height: 2.8rem;
+    @include header_third;
     letter-spacing: -0.0423077rem;
   }
   span {
     color: $textBlue;
+  }
+}
+
+.header__box {
+  display: flex;
+  justify-content: space-between;
+
+  &-primary {
+    @include header_main;
+    width: 63.5rem;
+  }
+  &-text {
+    @include sect_header;
+    font-style: italic;
+    opacity: 0.6;
+    mix-blend-mode: normal;
+    width: 30rem;
+    align-self: flex-end;
+    justify-self: center;
   }
 }
 
