--- a/css/index.css
+++ b/css/index.css
@@ -39,7 +39,156 @@ body {
   .navigation__links li:hover {
     color: #4a4ff2;
     transform: scale(1.2);
-    transition: all 0.2s ease-in-out; }
+    transition: all 0.2s ease-in-out;
+    curser: pointer; }
+
+.footer {
+  width: 100%;
+  display: flex; }
+
+.footer__links {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 6rem;
+  list-style-type: none; }
+  .footer__links a:link {
+    text-decoration: none;
+    font-size: 1.8rem;
+    font-weight: 700;
+    color: #111; }
+  .footer__links a:nth-child(1) {
+    margin-right: 3rem; }
+  .footer__links .fab {
+    list-style-type: none;
+    color: #111; }
+  .footer__links li:hover {
+    color: #4a4ff2;
+    transform: scale(1.2);
+    transition: all 0.2s ease-in-out;
+    curser: pointer; }
+
+.social-links {
+  width: fit-content;
+  margin-left: 10%; }
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
+html {
+  font-size: 62.5%; }
+
+body {
+  box-sizing: border-box;
+  font-family: "Mulish", sans-serif;
+  color: #111;
+  width: 85%;
+  height: auto;
+  margin: auto; }
+
+.navigation {
+  width: 100%;
+  display: flex; }
+
+.navigation__links {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 6rem;
+  list-style-type: none; }
+  .navigation__links a:link {
+    text-decoration: none;
+    font-size: 1.8rem;
+    font-weight: 700;
+    color: #111; }
+  .navigation__links a:nth-child(1) {
+    margin-right: 3rem; }
+  .navigation__links .fab {
+    list-style-type: none;
+    color: #111; }
+  .navigation__links li:hover {
+    color: #4a4ff2;
+    transform: scale(1.2);
+    transition: all 0.2s ease-in-out;
+    curser: pointer; }
+
+.footer {
+  width: 100%;
+  display: flex; }
+
+.footer__links {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 6rem;
+  list-style-type: none; }
+  .footer__links a:link {
+    text-decoration: none;
+    font-size: 1.8rem;
+    font-weight: 700;
+    color: #111; }
+  .footer__links a:nth-child(1) {
+    margin-right: 3rem; }
+  .footer__links .fab {
+    list-style-type: none;
+    color: #111; }
+  .footer__links li:hover {
+    color: #4a4ff2;
+    transform: scale(1.2);
+    transition: all 0.2s ease-in-out;
+    curser: pointer; }
+
+.social-links {
+  width: fit-content;
+  margin-left: 10%; }
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
+html {
+  font-size: 62.5%; }
+
+body {
+  box-sizing: border-box;
+  font-family: "Mulish", sans-serif;
+  color: #111;
+  width: 85%;
+  height: auto;
+  margin: auto; }
+
+.navigation {
+  width: 100%;
+  display: flex; }
+
+.navigation__links {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 6rem;
+  list-style-type: none; }
+  .navigation__links a:link {
+    text-decoration: none;
+    font-size: 1.8rem;
+    font-weight: 700;
+    color: #111; }
+  .navigation__links a:nth-child(1) {
+    margin-right: 3rem; }
+  .navigation__links .fab {
+    list-style-type: none;
+    color: #111; }
+  .navigation__links li:hover {
+    color: #4a4ff2;
+    transform: scale(1.2);
+    transition: all 0.2s ease-in-out;
+    curser: pointer; }
 
 .header__tertiary {
   font-size: 2.2rem;
@@ -92,7 +241,8 @@ body {
   .footer__links li:hover {
     color: #4a4ff2;
     transform: scale(1.2);
-    transition: all 0.2s ease-in-out; }
+    transition: all 0.2s ease-in-out;
+    curser: pointer; }
 
 .social-links {
   width: fit-content;
