--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,3 +1,5 @@
+@import "variables.scss";
+
 @mixin nav__container {
   width: 100%;
   display: flex;
@@ -13,7 +15,7 @@
   a:link {
     text-decoration: none;
     font-size: 1.8rem;
-    font-weight: 700;
+    font-weight: $fontBold;
     color: $textBlack;
   }
 
@@ -31,34 +33,35 @@
   color: $textBlue;
   transform: scale(1.2);
   transition: all 0.2s ease-in-out; //TODO add color to <a> on hover
+  curser: pointer;
 }
 
 @mixin header_main {
   font-size: 4rem;
-  font-weight: 700;
+  font-weight: $fontBold;
   line-height: 6rem;
 }
 
 @mixin header_second {
   font-size: 2.8rem;
-  font-weight: 700;
+  font-weight: $fontBold;
   line-height: 3.8rem;
 }
 
 @mixin header_third {
   font-size: 2.2rem;
-  font-weight: 700;
+  font-weight: $fontBold;
   line-height: 2.8rem;
 }
 
 @mixin paragraph {
   font-size: 1.6rem;
-  font-weight: 400;
+  font-weight: $fontNormal;
   line-height: 2.6rem;
 }
 
 @mixin sect_header {
   font-size: 1.8rem;
-  font-weight: 300;
+  font-weight: $fontLight;
   line-height: 2.3rem;
 }
