--- a/sass/_project.scss
+++ b/sass/_project.scss
@@ -1,26 +1,17 @@
-@import "mixins.scss";
-@import "variables.scss";
-
+@import "mixins";
+@import "variables";
 // Browser reset
 *,
 *::after,
 *::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
+  @include universal;
 }
-
 html {
   font-size: 62.5%;
 }
 
 body {
-  box-sizing: border-box;
-  font-family: "Mulish", sans-serif;
-  color: $textBlack;
-  width: 85%;
-  height: auto;
-  margin: auto;
+  @include body;
 }
 
 // Navigation
