--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,16 +1,15 @@
 // Partial files
-@import "project.scss";
-@import "contact.scss";
-@import "mixins.scss";
-@import "variables.scss";
+@import "project";
+@import "contact";
+@import "mixins";
+
+@import "variables";
 
 // Browser reset
 *,
 *::after,
 *::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
+  @include universal;
 }
 
 html {
@@ -18,12 +17,7 @@ html {
 }
 
 body {
-  box-sizing: border-box;
-  font-family: "Mulish", sans-serif;
-  color: $textBlack;
-  width: 85%;
-  height: auto;
-  margin: auto;
+  @include body;
 }
 
 // Navigation
