Troubleshooting style link between pages

--- a/css/index.css
+++ b/css/index.css
@@ -72,8 +72,8 @@ body {
   width: fit-content;
   margin-left: 10%; }
 
-@use 'mixins';
-@use 'variables';
+@use "mixins";
+@use "variables";
 *,
 *::after,
 *::before {
