--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  margin-top: 6rem;
+  align-items: center;
   list-style-type: none; }
   .navigation__links a:link {
     text-decoration: none;
@@ -50,7 +50,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  margin-top: 6rem;
+  align-items: center;
   list-style-type: none; }
   .footer__links a:link {
     text-decoration: none;
@@ -98,7 +98,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  margin-top: 6rem;
+  align-items: center;
   list-style-type: none; }
   .navigation__links a:link {
     text-decoration: none;
@@ -124,7 +124,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  margin-top: 6rem;
+  align-items: center;
   list-style-type: none; }
   .footer__links a:link {
     text-decoration: none;
@@ -172,7 +172,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  margin-top: 6rem;
+  align-items: center;
   list-style-type: none; }
   .navigation__links a:link {
     text-decoration: none;
@@ -226,7 +226,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  margin-top: 6rem;
+  align-items: center;
   list-style-type: none; }
   .footer__links a:link {
     text-decoration: none;
@@ -246,6 +246,6 @@ body {
 
 .social-links {
   width: fit-content;
-  margin-left: 10%; }
+  margin-left: 5%; }
 
 /*# sourceMappingURL=index.css.map */
