--- a/css/project.css
+++ b/css/project.css
@@ -24,7 +24,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  margin-top: 6rem;
+  align-items: center;
   list-style-type: none; }
   .navigation__links a:link {
     text-decoration: none;
@@ -42,6 +42,22 @@ body {
     transition: all 0.2s ease-in-out;
     curser: pointer; }
 
+.header__box {
+  display: flex;
+  margin-top: 3rem;
+  justify-content: space-between; }
+  .header__box-primary {
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 6rem;
+    width: 48rem; }
+  .header__box-secondary {
+    width: 50rem;
+    height: 35rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly; }
+
 .footer {
   width: 100%;
   display: flex; }
@@ -50,7 +66,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  margin-top: 6rem;
+  align-items: center;
   list-style-type: none; }
   .footer__links a:link {
     text-decoration: none;
