--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,3 +1,4 @@
+// Browser reset
 @mixin universal {
   margin: 0;
   padding: 0;
@@ -12,7 +13,7 @@
   height: auto;
   margin: auto;
 }
-
+// Navigation
 @mixin nav__container {
   width: 100%;
   display: flex;
@@ -48,10 +49,25 @@
   curser: pointer;
 }
 
+// Header
 @mixin header_main {
   font-size: 4rem;
   font-weight: $fontBold;
   line-height: 6rem;
+}
+
+@mixin box {
+  display: flex;
+  margin-top: 3rem;
+  justify-content: space-between;
+}
+
+@mixin boxSecondary {
+  width: 50rem;
+  height: 35rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 @mixin header_second {
