--- a/css/project.css
+++ b/css/project.css
@@ -45,18 +45,34 @@ body {
 .header__box {
   display: flex;
   margin-top: 3rem;
-  justify-content: space-between; }
+  justify-content: space-between;
+  margin-top: 0; }
   .header__box-primary {
     font-size: 4rem;
     font-weight: 700;
     line-height: 6rem;
     width: 48rem; }
   .header__box-secondary {
-    width: 50rem;
+    width: 48rem;
     height: 35rem;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly; }
+  .header__box-paragraph {
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 2.6rem;
+    mix-blend-mode: normal;
+    opacity: 0.8; }
+
+.header__table-box {
+  width: 50rem;
+  height: 30rem; }
+.header__table-td {
+  padding: 1.6rem;
+  mix-blend-mode: normal;
+  opacity: 0.3;
+  border-bottom: 0.1rem solid #979797; }
 
 .footer {
   width: 100%;
