--- a/css/index.css
+++ b/css/index.css
@@ -51,9 +51,9 @@ body {
     font-size: 4rem;
     font-weight: 700;
     line-height: 6rem;
-    width: 48rem; }
+    width: 50rem; }
   .header__box-secondary {
-    width: 48rem;
+    width: 62rem;
     height: 35rem;
     display: flex;
     flex-direction: column;
@@ -63,16 +63,26 @@ body {
     font-weight: 400;
     line-height: 2.6rem;
     mix-blend-mode: normal;
-    opacity: 0.8; }
+    opacity: 0.8;
+    margin-top: 2.8rem; }
 
 .header__table-box {
+  display: flex;
+  justify-content: flex-end;
   width: 50rem;
-  height: 30rem; }
+  height: 3.5rem; }
 .header__table-td {
+  font-size: 1.8rem;
+  font-weight: 300;
+  line-height: 2.3rem;
   padding: 1.6rem;
   mix-blend-mode: normal;
-  opacity: 0.3;
+  opacity: 0.6;
   border-bottom: 0.1rem solid #979797; }
+
+.bold {
+  font-weight: 700;
+  color: #111; }
 
 .footer {
   width: 100%;
