--- a/css/project.css
+++ b/css/project.css
@@ -84,6 +84,13 @@ body {
   font-weight: 700;
   color: #111; }
 
+.project__hero-image {
+  width: 100%;
+  display: flex;
+  height: 76.6rem;
+  justify-content: center;
+  align-items: center; }
+
 .footer {
   width: 100%;
   display: flex; }
