--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -13,6 +13,13 @@
   height: auto;
   margin: auto;
 }
+
+// Layout
+@mixin pos-center {
+  justify-content: center;
+  align-items: center;
+}
+
 // Navigation
 @mixin nav__container {
   width: 100%;
@@ -100,7 +107,7 @@
 @mixin table {
   &-box {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     width: 50rem;
     height: 3.5rem;
   }
