--- a/sass/contact.scss
+++ b/sass/contact.scss
@@ -28,6 +28,15 @@ body {
   }
 }
 
+// Contact header
+
+// Form
+
+// Images
+.img-map {
+  width: 100%;
+}
+
 // Footer
 .footer {
   @include nav__container;
