--- a/css/contact.css
+++ b/css/contact.css
@@ -42,6 +42,63 @@ body {
     transition: all 0.2s ease-in-out;
     curser: pointer; }
 
+.header__box {
+  display: flex;
+  margin-top: 3rem;
+  justify-content: space-between;
+  margin-top: 0; }
+  .header__box-primary {
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 6rem;
+    width: 47.5rem; }
+  .header__box-secondary {
+    width: 62rem;
+    height: 35rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly; }
+  .header__box-paragraph {
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 2.6rem;
+    mix-blend-mode: normal;
+    opacity: 0.8;
+    margin-top: 1.4rem;
+    width: 44.5rem; }
+
+.form__container {
+  display: flex;
+  flex-direction: column;
+  width: 47.5rem;
+  height: 29rem;
+  justify-content: space-evenly; }
+  .form__container-label {
+    font-weight: 700;
+    font-size: 1.6rem;
+    line-height: 2rem;
+    color: #111;
+    mix-blend-mode: normal;
+    opacity: 0.6; }
+  .form__container-input {
+    padding: 1.8rem; }
+  .form__container-btn {
+    font-weight: 700;
+    font-size: 1.6rem;
+    line-height: 2rem;
+    color: #111;
+    color: #fff;
+    width: 12.5rem;
+    height: 5rem;
+    background-color: #4a4ff2;
+    text-align: center;
+    border: none; }
+
+.img-box {
+  display: flex;
+  align-items: center;
+  height: 80rem; }
+
 .img-map {
   width: 100%; }
 
