--- a/css/index.css
+++ b/css/index.css
@@ -64,6 +64,7 @@ body {
     line-height: 2.6rem;
     mix-blend-mode: normal;
     opacity: 0.8;
+    width: 63.5rem;
     margin-top: 2.8rem; }
 
 .header__table-box {
