--- a/sass/contact.scss
+++ b/sass/contact.scss
@@ -17,7 +17,7 @@ body {
 
 // Navigation
 .navigation {
-  @include nav__container;
+  @include flex__container;
 }
 
 .navigation__links {
@@ -76,7 +76,7 @@ body {
 
 // Footer
 .footer {
-  @include nav__container;
+  @include flex__container;
 }
 .footer__links {
   @include nav__links;
