--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,7 +21,7 @@ body {
 
 // Navigation
 .navigation {
-  @include nav__container;
+  @include flex__container;
 }
 
 .navigation__links {
@@ -63,7 +63,7 @@ body {
 
 // Footer
 .footer {
-  @include nav__container;
+  @include flex__container;
 }
 .footer__links {
   @include nav__links;
