--- a/sass/main.scss
+++ b/sass/main.scss
@@ -108,6 +108,13 @@ body {
 }
 
 // Award section
+.grid__section {
+  display: grid;
+  grid-template-columns: repeat(4, auto, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 1rem;
+  align-items: center;
+}
 // Design section
 
 // Footer
