--- a/css/index.css
+++ b/css/index.css
@@ -405,10 +405,48 @@ body {
 
 .grid__section {
   display: grid;
-  grid-template-columns: repeat(4, auto, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 1rem;
   align-items: center; }
+  .grid__section-header {
+    font-size: 2.2rem;
+    font-weight: 700;
+    line-height: 2.8rem;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2; }
+  .grid__section-sub {
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 2.3rem;
+    grid-column-start: 2;
+    grid-column-end: 3; }
+  .grid__section-title {
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2rem;
+    color: #111;
+    grid-column-start: 3;
+    grid-column-end: 4; }
+  .grid__section-year {
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2rem;
+    color: #111;
+    grid-column-start: 4;
+    grid-column-end: 5; }
+  .grid__section-text {
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 2.6rem;
+    mix-blend-mode: normal;
+    opacity: 0.8;
+    mix-blend-mode: normal;
+    opacity: 0.6;
+    grid-column-start: 3;
+    grid-column-end: 4; }
 
 .footer {
   width: 100%;
