--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -108,6 +108,13 @@
   line-height: 2.3rem;
 }
 
+@mixin sect_title {
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 2rem;
+  color: $textBlack;
+}
+
 // Table
 @mixin table {
   &-box {
