--- a/sass/main.scss
+++ b/sass/main.scss
@@ -110,10 +110,45 @@ body {
 // Award section
 .grid__section {
   display: grid;
-  grid-template-columns: repeat(4, auto, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 1rem;
   align-items: center;
+
+  &-header {
+    @include header_third;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+
+  &-sub {
+    @include sect_header;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    // grid-row-start: ;
+    // grid-row-end: ;
+  }
+
+  &-title {
+    @include sect_title;
+    grid-column-start: 3;
+    grid-column-end: 4;
+  }
+
+  &-year {
+    @include sect_title;
+    grid-column-start: 4;
+    grid-column-end: 5;
+  }
+
+  &-text {
+    @include paragraph;
+    @include text_opacity;
+    grid-column-start: 3;
+    grid-column-end: 4;
+  }
 }
 // Design section
 
