--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -176,4 +176,15 @@
   border: none;
 }
 
+// Grid mixin
+@mixin grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 3rem;
+  grid-row-gap: 2rem;
+  align-items: center;
+  justify-content: space-between;
+}
+
 @import "variables";
