--- a/css/contact.css
+++ b/css/contact.css
@@ -40,7 +40,8 @@ body {
     color: #4a4ff2;
     transform: scale(1.2);
     transition: all 0.2s ease-in-out;
-    curser: pointer; }
+    curser: pointer;
+    border-bottom: 0.2rem solid #4a4ff2; }
 
 .header__box {
   display: flex;
@@ -138,7 +139,8 @@ body {
     color: #4a4ff2;
     transform: scale(1.2);
     transition: all 0.2s ease-in-out;
-    curser: pointer; }
+    curser: pointer;
+    border-bottom: 0.2rem solid #4a4ff2; }
 
 .social-links {
   width: fit-content;
