--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -179,7 +179,7 @@
 // Grid mixin
 @mixin grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: 40% 15% 15% 10%;
   grid-template-rows: repeat(2, 1fr);
   grid-column-gap: 3rem;
   grid-row-gap: 2rem;
