--- a/sass/contact.scss
+++ b/sass/contact.scss
@@ -25,6 +25,7 @@ body {
 
   li:hover {
     @include hover;
+    border-bottom: 0.2rem solid $textBlue;
   }
 }
 
@@ -83,6 +84,7 @@ body {
 
   li:hover {
     @include hover;
+    border-bottom: 0.2rem solid $textBlue;
   }
 }
 
